--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           set -euo pipefail
           python -m pip install --upgrade pip
-          pip install requests
+          pip install requests beautifulsoup4
 
       - name: Run Azure Service Tag Watcher
         run: |
