--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -40,7 +40,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install requests beautifulsoup4
 
-      - name: Run Azure Service Tag Watcher
+      - name: Run Azure Service Tag Tracker
         run: |
           set -euo pipefail
           BASELINE="${{ github.event.inputs.baseline_setup || 'false' }}"
